@@ -32,6 +32,8 @@ Extension modules
 Library
 -------
 
+- Bug #792101: Add missing file operations for httplib.SSLFile.
+
 - Bug #811082: test_tempfile fails if space in install directory.
 
 - Bug #780461: platform.mac_ver() raised MacOSError exception under OS X.
